--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "vite-project",
+  "name": "react-feedback-hooks",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://yevhenchementsov.github.io/react-feedback-hooks/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "precommit": "lint-staged",
     "prepare": "husky install",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier . --cache --write",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -29,10 +31,8 @@
     "vite": "^4.4.5"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix"
-    ]
+    "*.{js,jsx}": "yarn lint",
+    "*.{js,jsx,css,md,html,json}": "yarn format"
   },
   "husky": {
     "hooks": {
